[gd_scene load_steps=5 format=2]

[ext_resource path="res://MiscRelated/AttackSpriteRelated/AttackSprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://EnemyRelated/EnemyTypes/Type_Faithful/_FactionAssets/CrossMarker/CrossMarker.png" type="Texture" id=2]
[ext_resource path="res://EnemyRelated/EnemyTypes/Type_Faithful/_FactionAssets/CrossMarker/CrossMarker.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="CrossMarker" instance=ExtResource( 1 )]
frames = SubResource( 1 )
offset = Vector2( -0.5, -7 )
script = ExtResource( 3 )
has_lifetime = false

[node name="MouseDetector" type="MarginContainer" parent="." index="0"]
margin_left = -7.0
margin_top = -18.0
margin_right = 6.0
margin_bottom = 4.0

[connection signal="tree_exiting" from="." to="." method="_on_CrossMarker_tree_exiting"]
[connection signal="visibility_changed" from="." to="." method="_on_CrossMarker_visibility_changed"]
[connection signal="mouse_entered" from="MouseDetector" to="." method="_on_MouseDetector_mouse_entered"]
[connection signal="mouse_exited" from="MouseDetector" to="." method="_on_MouseDetector_mouse_exited"]
